css/main.css
/* ======= */
/* GENERAL */
/* ======= */

.center {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

.flex-center {
  display: flex;
  justify-content: center;
}

.main {
  min-height: calc(100vh - 105px);
  min-height: -webkit-calc(100vh - 105px);
  min-height: -moz-calc(100vh - 105px);
}

@media only screen and (max-width: 991px) {
  .main {
    min-height: calc(100vh - 142px);
    min-height: -webkit-calc(100vh - 142px);
    min-height: -moz-calc(100vh - 142px);
  }
}


/* ======= */
/* BUTTONS */
/* ======= */

.btn-outline {
  font-weight: 600;
  text-transform: uppercase;
  padding: 10px 19px;
  text-align: center;
  width: 100px;
  display: block;
  font-size: 11px;
  text-decoration: none;
  line-height: 100% !important;
  margin-top: 10px !important;
  letter-spacing: 0.8px;
  color: #ff3a3a;
  transition: all ease-in-out 0.7s;
  -webkit-transition: all ease-in-out 0.7s;
  -moz-transition: all ease-in-out 0.7s;
  background-color: white;
  border: 3px solid #ff3a3a;
}

.btn-outline:hover {
  transition: all ease-in-out 0.7s;
  -webkit-transition: all ease-in-out 0.7s;
  -moz-transition: all ease-in-out 0.7s;
  color: white;
  background-color: #ff3a3a;
  cursor: pointer;
}

.btn-solid {
  font-weight: 600;
  text-transform: uppercase;
  padding: 10px 19px;
  text-align: center;
  width: 100px;
  display: block;
  font-size: 11px;
  text-decoration: none;
  line-height: 100% !important;
  margin-top: 10px !important;
  letter-spacing: 0.8px;
  color: #ff3a3a;
  background-color: white;
  transition: all ease-in-out 0.7s;
  -webkit-transition: all ease-in-out 0.7s;
  -moz-transition: all ease-in-out 0.7s;
  border: none;
}

.btn-solid:hover {
  transition: all ease-in-out 0.7s;
  -webkit-transition: all ease-in-out 0.7s;
  -moz-transition: all ease-in-out 0.7s;
  color: white;
  background-color: #ff3a3a;
  cursor: pointer;
}

/* ===== */
/* LINKS */
/* ===== */

a:link, a:visited {
  color: #ff0000;
}

.main a:hover, .main a:active, .main a:focus {
  color: #990000 !important;
}

/* ====== */
/* NAVBAR */
/* ====== */

.navbar-nav {
  height: 50px;
}

.navbar-nav li {
  transition: all ease-in-out 0.2s;
  -webkit-transition: all ease-in-out 0.2s;
  -moz-transition: all ease-in-out 0.2s;
}

.navbar-nav li:hover {
  border-bottom: 5px solid red;
  transform: translateY(-5px);
}

/* ====== */
/* FOOTER */
/* ====== */

footer {
  background-color: #ff3a3a;
  padding-top: 28px;
  padding-bottom: 20px;
  margin-top: 20px;
}

footer p {
  font-weight: bold;
  padding-top: 7px;
}

footer .col-md-6 {
  display: flex;
  align-items: center;
  justify-content: center;
}

@media only screen and (min-width: 992px) {
  footer .text {
    justify-content: flex-start;
  }
  
  footer .icons {
    justify-content: flex-end;
  }
}

.fa-heart, .fa-circle {
  color: white;
}

.fa-github, .fa-envelope {
  color: black;
}

/* ====== */
/* BANNER */
/* ====== */

#home {
  background-image: url("../images/background.jpg");
}

.banner {
  z-index: -100;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-position: center;
  position: fixed;
  display: inline-block;
  align-items: center;
  font-size: 5rem !important;
}

.banner-text {
  padding: 37vh 20vw !important;
  width: 100% !important;
}

.banner-404-text {
  padding: 34vh 20vw !important;
  width: 100% !important;
}

.cursor::after {
  content: '|';
  animation: blink 0.5s infinite;
  -webkit-animation: blink 0.5s infinite;
  -moz-animation: blink 0.5s infinite;
}

.jumbotron {
  height: 100vh;
  background-attachment: fixed;
}

.profile-picture {
  width: 150px;
  height: 150px;
  border-radius: 100%;
  background-image: url("../images/me-cropped.jpg");
  background-origin: center;
  background-position: center;
  background-size: cover;
  border: 5px solid #ff3a3a;
}

/* ===== */
/* FORMS */
/* ===== */

input, textarea {
  display: block;
  padding: 5px;
  width: 300px;
  border: none;
  border-bottom: 1px solid #757575;
  max-width: 100%;
  outline: none;
}

textarea {
  min-height: 51px;
  resize: vertical;
}

input:focus ~ .bar:before, input:focus ~ .bar:after,
textarea:focus ~ .bar:before, textarea:focus ~ .bar:after {
  width: 50%;
}

.input {
  position: relative;
  margin-bottom: 10px;
}

.bar {
  display: block;
  position: relative;
  width: 300px;
  max-width: 100%;
}

.bar:before, .bar:after {
  position: absolute;
  width: 0;
  height: 2px;
  bottom: 0;
  content: '';
  background: #ff0000;
  transition: 0.2s linear all; 
  -webkit-transition: 0.2s linear all;
  -moz-transition: 0.2s linear all;
}

.bar:before {
  left: 50%;
}

.bar:after {
  right: 50%;
}

.send-btn {
  width: 100px;
}

/* ========== */
/* ANIMATIONS */
/* ========== */

@keyframes blink {
  from {
    opacity: 0;
  } to {
    opacity: 1;
  }
}

/* === */
/* OLD */
/* === */

#blockrunner {
  background-image: url("../images/blockrunnerblurred.jpg");
}

#flappybird {
  background-image: url("../images/flappybird.jpg");
}

#snake {
  background-image: url("../images/snake.jpg");
}

#tomatotapper {
  background-image: url("../images/tomatotapperresized.jpg");
}

.jumboWrap {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.2);
  width: 100%;
  height: 100vh;
}

